--- a/index.html
+++ b/index.html
@@ -153,20 +153,28 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-md-6">
-                        <form>
+                        <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
+                            <strong>Terimakasih!</strong> Pesan anda sudah kami terima.
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                        <form name="submit-to-google-sheet">
                             <div class="mb-3">
                                 <label for="name" class="form-label">Nama Lengkap</label>
-                                <input type="text" class="form-control" id="name" aria-describedby="name" />
+                                <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" />
                             </div>
                             <div class="mb-3">
                                 <label for="email" class="form-label">Email</label>
-                                <input type="email" class="form-control" id="email" aria-describedby="email" />
+                                <input type="email" class="form-control" id="email" aria-describedby="email" name="email" />
                             </div>
                             <div class="mb-3">
                                 <label for="pesan" class="form-label">Pesan</label>
-                                <textarea class="form-control" id="pesan" rows="3"></textarea>
+                                <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
                             </div>
-                            <button type="submit" class="btn btn-primary">Kirim</button>
+                            <button type="submit" class="btn btn-primary btn-kirim">Kirim</button>
+                            <button class="btn btn-primary btn-loading d-none" type="button" disabled>
+                                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                                Loading...
+                            </button>
                         </form>
                     </div>
                 </div>
@@ -188,5 +196,33 @@
         <!-- Akhir Footer -->
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+        <script>
+            const scriptURL = 'https://script.google.com/macros/s/AKfycbxt-a-h_amc5D9pOEficcls9w5ZigbZJ35gMOvWV4ZYq1MEvPLufPkry9RlDXXBzVrJ/exec';
+            const form = document.forms['submit-to-google-sheet'];
+            const btnKirim = document.querySelector('.btn-kirim');
+            const btnLoading = document.querySelector('.btn-loading');
+            const myAlert = document.querySelector('.my-alert');
+
+            form.addEventListener('submit', (e) => {
+                e.preventDefault();
+                // ketika tombol submit diklik
+                // tampilkan tombol loading, hilangkan tombol kirim
+                btnLoading.classList.toggle('d-none');
+                btnKirim.classList.toggle('d-none');
+                fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+                    .then((response) => {
+                        // tampilkan tombol kirim, hilangkan tombol loading
+                        btnLoading.classList.toggle('d-none');
+                        btnKirim.classList.toggle('d-none');
+                        // tampilkan alert
+                        myAlert.classList.toggle('d-none');
+                        // reset form
+                        form.reset();
+                        console.log('Success!', response);
+                    })
+                    .catch((error) => console.error('Error!', error.message));
+            });
+        </script>
     </body>
 </html>
