--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <!-- Bpptstrap Icons -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
 
+        <!-- AOS -->
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
         <!-- My CSS -->
         <link rel="stylesheet" href="style.css" />
 
@@ -48,7 +51,7 @@
         <section class="jumbotron text-center">
             <img src="img/alif.jpg" alt="Muchammad Alif Zaidan" width="200" class="rounded-circle img-thumbnail" />
             <h1 class="display-4">Muchammad Alif Zaidan</h1>
-            <p class="lead">College Student | Web Developer</p>
+            <p class="lead"></p>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
                 <path
                     fill="#ffff"
@@ -63,21 +66,17 @@
         <section id="about">
             <div class="container">
                 <div class="row text-center mb-3">
-                    <div class="col">
+                    <div class="col" data-aos="fade-down" data-aos-duration="1000">
                         <h2>About Me</h2>
                     </div>
                 </div>
                 <div class="row justify-content-center fs-5 text-center">
-                    <div class="col-md-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ratione tenetur iure repellat modi harum eligendi sit fuga et. Quam?</div>
-                    <div class="col-md-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae incidunt quisquam earum unde. Dolores, debitis numquam. Voluptas ab nihil officia accusantium repellat cum aperiam laboriosam.</div>
+                    <div class="col-md-4" data-aos="fade-right" data-aos-duration="1000">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ratione tenetur iure repellat modi harum eligendi sit fuga et. Quam?</div>
+                    <div class="col-md-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae incidunt quisquam earum unde. Dolores, debitis numquam. Voluptas ab nihil officia accusantium repellat cum aperiam laboriosam.</div>
                 </div>
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-                <path
-                    fill="#e2edff"
-                    fill-opacity="1"
-                    d="M0,128L60,117.3C120,107,240,85,360,106.7C480,128,600,192,720,202.7C840,213,960,171,1080,170.7C1200,171,1320,213,1380,234.7L1440,256L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"
-                ></path>
+                <path fill="#e2edff" fill-opacity="1" d="M0,128L60,117.3C120,107,240,85,360,106.7C480,128,600,192,720,202.7C840,213,960,171,1080,170.7C1200,171,1320,213,1380,234.7L1440,256L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
             </svg>
         </section>
         <!-- Akhir About -->
@@ -86,13 +85,13 @@
         <section id="projects">
             <div class="container">
                 <div class="row text-center mb-3">
-                    <div class="col">
+                    <div class="col" data-aos="fade-down" data-aos-duration="1000">
                         <h2>My Projects</h2>
                     </div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-md-4 mb-3">
-                        <div class="card">
+                        <div class="card" data-aos="flip-left" data-aos-duration="600">
                             <img src="img/projects/1.jpg" class="card-img-top" alt="Project 1" />
                             <div class="card-body">
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -100,7 +99,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 mb-3">
-                        <div class="card">
+                        <div class="card" data-aos="flip-left" data-aos-duration="600" data-aos-delay="100">
                             <img src="img/projects/2.jpg" class="card-img-top" alt="Project 2" />
                             <div class="card-body">
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -108,7 +107,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 mb-3">
-                        <div class="card">
+                        <div class="card" data-aos="flip-left" data-aos-duration="600" data-aos-delay="200">
                             <img src="img/projects/3.jpg" class="card-img-top" alt="Project 3" />
                             <div class="card-body">
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -116,7 +115,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 mb-3">
-                        <div class="card">
+                        <div class="card" data-aos="flip-left" data-aos-duration="600" data-aos-delay="300">
                             <img src="img/projects/4.jpg" class="card-img-top" alt="Project 4" />
                             <div class="card-body">
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -124,7 +123,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 mb-3">
-                        <div class="card">
+                        <div class="card" data-aos="flip-left" data-aos-duration="600" data-aos-delay="400">
                             <img src="img/projects/5.jpg" class="card-img-top" alt="Project 5" />
                             <div class="card-body">
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -134,20 +133,80 @@
                 </div>
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-                <path
-                    fill="#ffffff"
-                    fill-opacity="1"
-                    d="M0,32L48,64C96,96,192,160,288,176C384,192,480,160,576,128C672,96,768,64,864,74.7C960,85,1056,139,1152,144C1248,149,1344,107,1392,85.3L1440,64L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-                ></path>
+                <path fill="#ffffff" fill-opacity="1" d="M0,32L48,64C96,96,192,160,288,176C384,192,480,160,576,128C672,96,768,64,864,74.7C960,85,1056,139,1152,144C1248,149,1344,107,1392,85.3L1440,64L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
             </svg>
         </section>
         <!-- Akhir Projects -->
+
+        <!-- Gallery -->
+        <section id="gallery">
+            <div class="container">
+                <div class="row text-center mb-3">
+                    <div class="col" data-aos="fade-down" data-aos-duration="1000">
+                        <h2>Gallery</h2>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-3">
+                        <a href="#">
+                            <img src="img/thumbnail/1.jpg" alt="Gambar 1" class="img-fluid gallery-img" />
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="#">
+                            <img src="img/thumbnail/2.jpg" alt="Gambar 2" class="img-fluid gallery-img" />
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="#">
+                            <img src="img/thumbnail/3.jpg" alt="Gambar 3" class="img-fluid gallery-img" />
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="#">
+                            <img src="img/thumbnail/4.jpg" alt="Gambar 4" class="img-fluid gallery-img" />
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="#">
+                            <img src="img/thumbnail/5.jpg" alt="Gambar 5" class="img-fluid gallery-img" />
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="#">
+                            <img src="img/thumbnail/6.jpg" alt="Gambar 6" class="img-fluid gallery-img" />
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="#">
+                            <img src="img/thumbnail/7.jpg" alt="Gambar 7" class="img-fluid gallery-img" />
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="#">
+                            <img src="img/thumbnail/8.jpg" alt="Gambar 8" class="img-fluid gallery-img" />
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="#">
+                            <img src="img/thumbnail/9.jpg" alt="Gambar 9" class="img-fluid gallery-img" />
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="#">
+                            <img src="img/thumbnail/10.jpg" alt="Gambar 10" class="img-fluid gallery-img" />
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Akhir Gallery -->
 
         <!-- Contact -->
         <section id="contact">
             <div class="container">
                 <div class="row text-center mb-3">
-                    <div class="col">
+                    <div class="col" data-aos="fade-down" data-aos-duration="1000">
                         <h2>Contact Me</h2>
                     </div>
                 </div>
@@ -196,6 +255,31 @@
         <!-- Akhir Footer -->
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+            const galleryImage = document.querySelectorAll('.gallery-img');
+
+            galleryImage.forEach((img, i) => {
+                img.dataset.aos = 'fade-down';
+                img.dataset.aosDelay = i * 100;
+                img.dataset.aosDuration = 700;
+            });
+
+            AOS.init({
+                once: true,
+            });
+        </script>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.3/gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.3/TextPlugin.min.js"></script>
+        <script>
+            gsap.registerPlugin(TextPlugin);
+            gsap.to('.lead', { duration: 2, delay: 1, text: 'College Student | Web Developer' });
+            gsap.from('.jumbotron img', { duration: 1, rotateY: 360, opacity: 0 });
+            gsap.from('.navbar', { duration: 1.5, y: '-100%', opacity: 0 });
+            gsap.from('.display-4', { duration: 1, x: -50, opacity: 0, delay: 0.5, ease: 'back' });
+        </script>
 
         <script>
             const scriptURL = 'https://script.google.com/macros/s/AKfycbxt-a-h_amc5D9pOEficcls9w5ZigbZJ35gMOvWV4ZYq1MEvPLufPkry9RlDXXBzVrJ/exec';
